# prym

./: README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
prym/: __init__.py
tests/: test_prym.py
