[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prym"
authors = [
    {name = "Richard Shaw", email = "richard@phas.ubc.ca"},
]
description = "Convert results of PromQL queries into numpy arrays or pandas dataframes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests",
    "numpy",
    "pandas",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["prym"]

[tool.setuptools.dynamic]
version = {attr = "prym.__version__"}

[tool.ruff]
select = ["ALL"]
ignore = [
    "TRY003",
    "EM101",
    "EM102",
    "ANN101",
    "ANN102",
    "ANN202",
    "ANN204",
    "PD002",
    "B905",
    "FBT001",
    "FBT002",
    "D401",
    "T201",
    "TD",
    "FIX002",
    "ERA001",
    "G004",
]
extend-exclude = ["code"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "FBT", "PLR2004", "S311", "ANN201", "ANN001", "INP001"]